--- a/index.css
+++ b/index.css
@@ -307,8 +307,8 @@ tr {
 
 @media screen and (max-width:1000px ) {
     .qualifications {
-        width: 200px;
-        margin-left: 270px;
+        width: 470px;
+        margin-left: 20px;
         margin-top: 50px;
         font-size: 8px;
         height: 400px;
@@ -317,7 +317,11 @@ tr {
 
 @media screen and (max-width:400px ) {
     .qualifications {
+        width: 470px;
+        margin-left: 20px;
         margin-top: 50px;
+        font-size: 8px;
+        height: 400px;
     }
 }
 
@@ -325,7 +329,7 @@ tr {
     background-color:;
     margin-left: 30px;
     margin-top: -232px;
-    width: 267px;
+    width: 470px;
     height: 440px;
     font-family: serif;
     font-size: 16px;
