--- a/index.css
+++ b/index.css
@@ -403,7 +403,11 @@ tr {
     font-size: 16px;
     width: 273px;
 }
-
+@media screen and (max-width:1000px ) {
+    .contact {
+        margin-left: 20px;
+    }
+}
 .contact-box {
     display: inline-block;
 }
